# ml-cpp

./: CMakeLists.txt  README.md
include/: NN.hpp  activations.hpp  fully_connected_layer.hpp  layer.hpp  loss.hpp  sigmoid_layer.hpp
src/: NN.cpp  activations.cpp  fully_connected_layer.cpp  layer.cpp  loss.cpp  main.cpp
